--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                   <i class="flaticon-stats"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"
+                  <a href="Strategy-Development.html"
                     ><h4>Strategy Development</h4></a
                   >
                 </div>
@@ -749,7 +749,7 @@
                     positioning for long-term success.
                   </p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Strategy-Development.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -763,7 +763,7 @@
                   <i class="flaticon-consulting"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"><h4>Digital Upgrade</h4></a>
+                  <a href="Digital-Upgrade.html"><h4>Digital Upgrade</h4></a>
                 </div>
                 <div class="pr2-pera-txt">
                   <p>
@@ -771,7 +771,7 @@
                     operations, enhance efficiency, and drive innovation.
                   </p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Digital-Upgrade.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -785,14 +785,14 @@
                   <i class="flaticon-sketch"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"
+                  <a href="Leadership-Growth.html"
                     ><h4>Leadership Growth</h4></a
                   >
                 </div>
                 <div class="pr2-pera-txt">
                   <p>Strong leadership inspires collaboration, drives success, and empowers team growth.</p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Leadership-Growth.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -806,7 +806,7 @@
                   <i class="flaticon-research-1"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"
+                  <a href="Regulatory-Compliance.html"
                     ><h4>Regulatory Compliance</h4></a
                   >
                 </div>
@@ -816,7 +816,7 @@
                     minimizing compliance risks effectively.
                   </p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Regulatory-Compliance.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -830,7 +830,7 @@
                   <i class="flaticon-business-report"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"
+                  <a href="Customer-Excellence.html"
                     ><h4>Customer Excellence</h4></a
                   >
                 </div>
@@ -840,7 +840,7 @@
                     loyalty, and drive long-term success.
                   </p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Customer-Excellence.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -854,7 +854,7 @@
                   <i class="flaticon-24-hours"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"
+                  <a href="Agile-Transformation.html"
                     ><h4>Agile Transformation</h4></a
                   >
                 </div>
@@ -864,7 +864,7 @@
                     flexibility and quick responses
                   </p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Agile-Transformation.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -878,7 +878,7 @@
                   <i class="flaticon-24-hours"></i>
                 </div>
                 <div class="pr2-headline">
-                  <a href="../service-single.html"
+                  <a href="Risk-Management.html"
                     ><h4>Risk Management and Mitigation</h4></a
                   >
                 </div>
@@ -887,7 +887,7 @@
                     We identify, assess, and mitigate risks, enhancing resilience, ensuring compliance, and fostering a risk-aware culture.
                   </p>
                 </div>
-                <a href="../service-single.html"
+                <a href="Risk-Management.html"
                   >Learn More <i class="fas fa-long-arrow-alt-right"></i
                 ></a>
               </div>
@@ -897,7 +897,7 @@
             class="pr2-load-more-btn pr2-primary-btn wow slideInUp"
             data-wow-delay="0.7s"
           >
-            <a href="../service.html">Explore More</a>
+            <a href="Strategy-Development.html">Explore More</a>
           </div>
         </div>
       </div>
