--- a/index.html
+++ b/index.html
@@ -64,20 +64,17 @@
         <div class="row align-items-center">
           <div class="col-lg-8">
             <div class="pr2-top-left">
+              <span>Welcome to Your Business Transformation Consultancy</span>
               <span
-                ><i class="fas fa-map-marker-alt"></i> 12 San Francisco,
-                California, USA</span
+                ><i class="fas fa-map-marker-alt"></i>  Manchester, UK.</span
               >
-              <span><i class="fas fa-envelope"></i> support@prysm.com</span>
-              <span><i class="far fa-clock"></i> 9.00AM-6.00PM</span>
+              
             </div>
           </div>
           <div class="col-lg-4">
             <div class="pr2-top-right">
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="contact.html">🕻</a>
+              <a href="https://www.linkedin.com/company/your-business-transformation-consultancy-ltd/"><i class="fab fa-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -120,7 +117,6 @@
             </nav>
             <div class="header-cta-btn text-center float-right">
               <a href="../contact.html" class="cta">Free consult</a>
-              <a href="#" class="sidemenu-btn"><i class="fas fa-bars"></i></a>
             </div>
           </div>
         </div>
@@ -171,62 +167,7 @@
     </header>
     <!-- End of Header Section -->
 
-    <!-- Sidebar Info -->
-    <div class="pr2-sidebar-info">
-      <div class="pr2-overlay-bg"></div>
-      <div class="pr2_sidebar_info_content">
-        <span class="close-menu"><i class="fas fa-times"></i></span>
-        <div class="pr2_sidebar_logo">
-          <a href="#"><img src="assets/images/logo.png" alt="" /></a>
-        </div>
-        <div class="pr2-pera-txt">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-            nonumyert et eirmod tempor invidunt ut labore et ert dolore magna
-            aliquyam erat, sed diam voluptua. At vero eos et accusam et cer
-            justo duo dolores et berr ea rebum. Stet clita kasd gubergren, no
-            sea takimata sanctus est Lorem ipsum dolor.
-          </p>
-        </div>
-        <div class="pr2-sidebar-gallery">
-          <ul>
-            <li>
-              <a href="#"><img src="assets/images/gallery/01.png" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="assets/images/gallery/02.jpg" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="assets/images/gallery/03.jpg" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="assets/images/gallery/04.jpg" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="assets/images/gallery/05.jpg" alt="" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="assets/images/gallery/06.jpg" alt="" /></a>
-            </li>
-          </ul>
-        </div>
-        <div class="pr2-sidebar-social">
-          <div class="pr2-headline">
-            <h5>Follow us on</h5>
-          </div>
-          <div class="pr2-social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-pinterest"></i></a>
-          </div>
-        </div>
-        <div class="pr2-sidebar-copyright">
-          <p>&copy; Copyright By <a href="../index.html">Themexriver</a></p>
-        </div>
-      </div>
-    </div>
-    <!-- Sidebar Info End -->
+
 
     <!-- Hero Slider End -->
     <div class="hero-slider-area">
@@ -357,7 +298,7 @@
                     font-family: Poppins;
                     text-transform: capitalize;
                   "
-                  ><a href="../service.html">Learn more </a>
+                  ><a href="projects.html">Learn more </a>
                 </rs-layer>
               </rs-group>
 
@@ -897,7 +838,7 @@
             class="pr2-load-more-btn pr2-primary-btn wow slideInUp"
             data-wow-delay="0.7s"
           >
-            <a href="Strategy-Development.html">Explore More</a>
+            <a href="Strategy-Development.html" style="color: white;">Explore More</a>
           </div>
         </div>
       </div>
@@ -1529,10 +1470,10 @@
           <div class="col-lg-4 col-md-6">
             <div class="pr2-footer-widget wow fadeInUp" data-wow-delay="0.3s">
               <div class="pr2-headline">
-                <h4>News Letter</h4>
+                <h4>Free Consultant</h4>
               </div>
               <div class="pr2-pera-txt">
-                <p>Lorem ipsum dolor sit amet, consectetur adivel facilisis</p>
+                <p>Schedule Your Free Consultation to Propel Your Business Forward</p>
               </div>
               <div class="pr2-sb-form">
                 <form action="#">
@@ -1540,7 +1481,7 @@
                     class="pr2-primary-btn wow fadeInUp"
                     data-wow-delay="0.2s" style="color: white;"
                   >
-                    <a href="../contact.html"
+                    <a href="contact.html"
                       >Make an appoinment <i class="fab fa-telegram-plane"></i
                     ></a>
                   </div>
@@ -1554,10 +1495,10 @@
                 <h4>Quick Link</h4>
                 <div class="pr2-ft-links">
                   <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">Our Projects</a></li>
-                    <li><a href="../service.html">Services</a></li>
-                    <li><a href="../contact.html">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Our Projects</a></li>
+                    <li><a href="Strategy-Development.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                 </div>
               </div>
@@ -1567,7 +1508,7 @@
       </div>
       <div class="pr2-copyright">
         <div class="pr2-pera-txt">
-          <p>2021 <a href="../index.html">Prysm</a> All rights reserved</p>
+          <p>Designed and Developed by <a href="https://www.cmtai.in/" style="text-decoration: underline;">Cmt Ai</a></p>
         </div>
       </div>
     </footer>
