--- a/index.html
+++ b/index.html
@@ -89,10 +89,14 @@
       <div class="container">
         <div class="header-main-menu clearfix">
           <div class="site-logo float-left">
-            <a href="../index.html"
-              ><img src="assets/images/logo.png" alt=""
-            /></a>
+            <a href="../index.html">
+              <video autoplay muted loop playsinline style="height: 50px; ">
+                <source src="assets/logo.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+            </a>
           </div>
+          
           <div class="main-header-menu-item float-right">
             <nav class="main-navigation-area clearfix ul-li">
               <ul class="menu-navigation">
