--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- Page Title -->
-    <title>Prysm - Home2</title>
+      <title>Your Business Transformation Consultancy</title>
 
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="favicon.png" />
