--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                     </div>
                     <div class="txt-content">
                       <div class="pr2-headline">
-                        <h4>Execute the Decission</h4>
+                        <h4>Execute the Decision</h4>
                       </div>
                       <div class="pr2-pera-txt">
                         <p>
@@ -1079,7 +1079,7 @@
                 </div>
               </div>
               <div class="pr2-primary-btn wow fadeInUp" data-wow-delay="0.2s" style="color: white;">
-                <a href="../contact.html">Make an appoinment</a>
+                <a href="../contact.html">Make an appointment</a>
               </div>
             </div>
           </div>
@@ -1102,7 +1102,7 @@
             <div class="pr2-title-area text-center wow fadeInUp">
               <div class="title-top pr2-headline">
                 <span class="pr2-subtitle">Customer Testimonial</span>
-                <h2>What's our clients <span>say</span></h2>
+                <h2>What our clients <span>say</span></h2>
               </div>
             </div>
           </div>
@@ -1474,7 +1474,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="pr2-footer-widget wow fadeInUp" data-wow-delay="0.3s">
               <div class="pr2-headline">
-                <h4>Free Consultant</h4>
+                <h4>Free Consultation</h4>
               </div>
               <div class="pr2-pera-txt">
                 <p>Schedule Your Free Consultation to Propel Your Business Forward</p>
@@ -1486,7 +1486,7 @@
                     data-wow-delay="0.2s" style="color: white;"
                   >
                     <a href="contact.html"
-                      >Make an appoinment <i class="fab fa-telegram-plane"></i
+                      >Make an appointment <i class="fab fa-telegram-plane"></i
                     ></a>
                   </div>
                 </form>
