--- a/contact.html
+++ b/contact.html
@@ -306,7 +306,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="pr2-footer-widget wow fadeInUp" data-wow-delay="0.3s">
                 <div class="pr2-headline">
-                  <h4>Free Consultant</h4>
+                  <h4>Free Consultation</h4>
                 </div>
                 <div class="pr2-pera-txt">
                   <p>Schedule Your Free Consultation to Propel Your Business Forward</p>
@@ -318,7 +318,7 @@
                       data-wow-delay="0.2s" style="color: white;"
                     >
                       <a href="contact.html"
-                        >Make an appoinment <i class="fab fa-telegram-plane"></i
+                        >Make an appointment <i class="fab fa-telegram-plane"></i
                       ></a>
                     </div>
                   </form>
