Replace logo images with video in header across multiple HTML files

--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
                 <span><i class="fas fa-times"></i></span>
               </div>
               <div class="m-brand-logo text-center">
-                <a href="index.html"
-                  ><img src="assets/images/logo2.png" alt=""
-                /></a>
+                <a href="../index.html">
+                  <video autoplay muted loop playsinline style="height: 50px; ">
+                    <source src="assets/logo.mp4" type="video/mp4" />
+                    Your browser does not support the video tag.
+                  </video>
+                </a>
               </div>
               <nav class="str-mobile-main-navigation clearfix ul-li">
                 <ul id="main-nav" class="navbar-nav text-capitalize clearfix">
